[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/nodes/debug_view.gd" type="Script" id=1]
[ext_resource path="res://resources/new_theme.tres" type="Theme" id=2]

[node name="DebugView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenderView" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_right = 113.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 113.0
margin_bottom = 14.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
text = "Channels:"

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 46.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
items = [ "None", null, false ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 14.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
text = "No channel selected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Control/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
